# pharmakin

./: .gitignore  README.md  pyproject.toml
src/pharmakin/: __init__.py  formulas.py  parameters.py  registry.py  relations.py  units.py
src/pharmakin/kinetics/: first_order.py  general.py
src/pharmakin/utils/: formula.py  formulas.py  parameter_base.py  parameters.py  registry.py  stats.py  units.py  utils.py
tests/: conftest.py  test_formulary.py  test_formulas.py  test_parameters.py  test_registry.py  test_units.py
