[tool.poetry]
name = "pharmakin"
version = "0.1.0"
description = ""
authors = ["bjarkemoensted <bjarkemoensted@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pint = "^0.24.4"
pytest = "^8.3.4"
sympy = "^1.13.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
